resolving display issue for icons on mobile

--- a/app/assets/stylesheets/pages/_home_mobile.scss
+++ b/app/assets/stylesheets/pages/_home_mobile.scss
@@ -68,4 +68,12 @@
     }
   }
 
+  .icon-home{
+    padding: 20px;
+  }
+
+
+  .home-tips{
+    padding: 25px;
+  }
 }
